--- a/Lab01_Ex02.ipynb
+++ b/Lab01_Ex02.ipynb
@@ -54,7 +54,8 @@
         "3.   Visualize some sample images from the dataset\n",
         "\n",
         "In this case, we are working with Tiny ImageNet, a dataset with 200 categories (classes) of images, where each image is 64x64 pixels in size.\n",
-        "\n"
+        "\n",
+        "The provided code is building a Data Processing and Loading pipeline to prepare the dataset for training a Deep Learning model.\n"
       ],
       "metadata": {
         "id": "Z6ez5UZLvF_Y"
@@ -62,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "QyCieCF1ZEgL",
         "outputId": "8115b9cf-3150-4ee6-8302-004987a4e68e",
@@ -119,6 +120,13 @@
         "        zip_file.extractall('/dataset') # extract all under the directory\n",
         "    print('Download and extraction complete!')\n",
         "\n",
+        "\"\"\"\n",
+        "the dataset is downloaded as:\n",
+        "/dataset/tiny-imagenet-200/train\n",
+        "/dataset/tiny-imagenet-200/test\n",
+        "\"\"\"\n",
+        "\n",
+        "\n",
         "# Define transformations for the dataset\n",
         "\"\"\"\n",
         "Preprocess the images before feeding them into a Deep Learning Model\n",
@@ -143,6 +151,16 @@
         "ImageFolder is a PyTorch dataset class designed for image classification.\n",
         "It expects a folder structure where each subfolder represents a class.\n",
         "\n",
+        "ImageFolder reads folders like:\n",
+        "train/\n",
+        "    class1/\n",
+        "          img1\n",
+        "          img2\n",
+        "          ...\n",
+        "    class2/\n",
+        "          img1\n",
+        "          img2\n",
+        "\n",
         "Then we apply the transformation\n",
         "\"\"\"\n",
         "tiny_imagenet_dataset_train = ImageFolder(root='/dataset/tiny-imagenet-200/train', transform=transform)\n",
@@ -150,8 +168,16 @@
         "\n",
         "# Create a DataLoader\n",
         "#Loads 64 images at a time (instead of one by one, which is slower)\n",
+        "# This allows us to train the models in chunks instead of loading everything into memory at once\n",
         "dataloader_train = DataLoader(tiny_imagenet_dataset_train, batch_size=64, shuffle=True)\n",
         "dataloader_test = DataLoader(tiny_imagenet_dataset_test, batch_size=64, shuffle=False)\n",
+        "\"\"\"\n",
+        "DataLoader structure:\n",
+        "images: Tensor of shape [64, 1, 64, 64]   # 64 grey scale images\n",
+        "labels: Tensor of shape [64]             # Corresponding class labels\n",
+        "\"\"\"\n",
+        "\n",
+        "\n",
         "\n",
         "# Determine the number of classes and samples\n",
         "num_classes = len(tiny_imagenet_dataset_train.classes) #List of all classes (categories) in the dataset.\n",
@@ -162,10 +188,15 @@
         "\n",
         "# Function to denormalize image for visualization\n",
         "def denormalize(image):\n",
+        "  #this step ensures that the process will be performed on the cpu\n",
+        "  #we trabsform the tensor into a numpy array\n",
+        "  #finally we transose the array from [C,H,W] to [H,W,C]\n",
         "    image = image.to('cpu').numpy().transpose((1, 2, 0))\n",
         "    mean = np.array([0.485, 0.456, 0.406])\n",
         "    std = np.array([0.229, 0.224, 0.225])\n",
+        "    #apply the inverse process of the normalization\n",
         "    image = image * std + mean\n",
+        "    #Clips any pixel values that might have gone below 0 or above 1\n",
         "    image = np.clip(image, 0, 1)\n",
         "    return image\n",
         "\n",
@@ -180,16 +211,17 @@
         "idx_to_class = {v: k for k, v in tiny_imagenet_dataset_train.class_to_idx.items()}\n",
         "\n",
         "# Loop through the DataLoader to get batches of images and labels\n",
-        "for images, labels in dataloader_train:\n",
-        "    for img, label in zip(images, labels):\n",
+        "for images, labels in dataloader_train: #iterate each batch\n",
+        "    for img, label in zip(images, labels): # iterate images within a batch\n",
         "        if label.item() not in classes_sampled:\n",
         "            ax = axes.flat[len(classes_sampled)]\n",
+        "            #denormalizes the image so it's ready to be visualized\n",
         "            img_np = denormalize(img)\n",
         "            ax.imshow(img_np)\n",
         "            ax.set_title(f'Class: {idx_to_class[label.item()]}')  # Now idx_to_class is defined\n",
         "            ax.axis('off')\n",
+        "            #add to the set\n",
         "            classes_sampled.add(label.item())\n",
-        "\n",
         "        if len(classes_sampled) == 10:\n",
         "            break\n",
         "    if len(classes_sampled) == 10:\n",
