--- a/Lab02.ipynb
+++ b/Lab02.ipynb
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "HuUvU_Gug7Gk"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "Xt1X5euKfoEd"
       },
@@ -143,7 +143,6 @@
         "])\n",
         "\n",
         "# root/{classX}/x001.jpg\n",
-        "\n",
         "tiny_imagenet_dataset_train = ImageFolder(root='tiny-imagenet/tiny-imagenet-200/train', transform=transform)\n",
         "tiny_imagenet_dataset_val = ImageFolder(root='tiny-imagenet/tiny-imagenet-200/val', transform=transform)"
       ]
@@ -166,9 +165,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "aefed6a3-2ff8-4bbb-f771-b8441f5ad35a"
+        "outputId": "4c1e1150-8e4c-4443-872f-301f6f7797bc"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,14 +182,28 @@
     {
       "cell_type": "code",
       "source": [
+        "import torch\n",
         "train_loader = torch.utils.data.DataLoader(tiny_imagenet_dataset_train, batch_size=32, shuffle=True, num_workers=8) # use 8 CPU workers (or process) to load the images in the backgorund while the GPU is training\n",
         "val_loader = torch.utils.data.DataLoader(tiny_imagenet_dataset_val, batch_size=32, shuffle=False)"
       ],
       "metadata": {
-        "id": "ExF2yRw9mT8G"
+        "id": "ExF2yRw9mT8G",
+        "outputId": "b4fd6416-0ceb-4442-f716-c9234cc5d741",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/torch/utils/data/dataloader.py:624: UserWarning: This DataLoader will create 8 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -202,9 +215,24 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "CNNs are made of 3 layers: <br>\n",
+        "\n",
+        "\n",
+        "1.   Convolutional Layer (nn.Conv2d)\n",
+        "This layer slides small filters across the image to detect features like edges or corners\n",
+        "2.   Activation function\n",
+        "3.   Fully connected layer (nn.Linear)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Ge6hrow0q5s5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "import torch\n",
         "from torch import nn\n",
         "\n",
         "# Define the custom neural network\n",
@@ -212,32 +240,65 @@
         "    def __init__(self):\n",
         "        super(CustomNet, self).__init__()\n",
         "        # Define layers of the neural network\n",
-        "        self.conv1 = nn.Conv2d(3, 64, kernel_size=3, padding=1, stride=1)\n",
+        "        # input has 3 color channels RGB, with 64 different filters, each filter is 3x3 size, padding takes the same size --> input is 224x224, output is also 224x224\n",
+        "        self.conv1 = nn.Conv2d(3, 64, kernel_size=3, padding=1, stride=1) #Output: 64 channels → it creates 64 different feature maps (filters)\n",
+        "        self.conv2 = nn.Conv2d(64, 128, kernel_size=3, padding=1) # takes 64 channels from conv1 and applies 128 new filters\n",
+        "        self.conv3 = nn.Conv2d(128, 256, kernel_size=3, padding=1)\n",
         "\n",
-        "        self.conv2 = nn.Conv2d(64, 128, kernel_size=3, padding=1)\n",
-        "        # Add more layers...\n",
+        "        # we don't need every tiny detail from the image so we use Pooling to shrink the image\n",
+        "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2) #reduces the image size by half 224 → 112\n",
+        "\n",
         "        self.fc1 = nn.Linear(256, 200) # 200 is the number of classes in TinyImageNet\n",
         "\n",
         "    def forward(self, x):\n",
         "        # Define forward pass\n",
+        "        # B x 3 x 224 x 224 --> inpus shape, Batch,Channel,height,weight\n",
+        "        x = self.conv1(x).relu()     # [B, 64, 224, 224]\n",
+        "        x = self.pool(x)             # [B, 64, 112, 112]\n",
         "\n",
-        "        # B x 3 x 224 x 224\n",
-        "        x = self.conv1(x).relu() # B x 64 x 224 x 224\n",
+        "        x = self.conv2(x).relu()     # [B, 128, 112, 112]\n",
+        "        x = self.pool(x)             # [B, 128, 56, 56]\n",
         "\n",
+        "        x = self.conv3(x).relu()     # [B, 256, 56, 56]\n",
+        "        x = self.pool(x)             # [B, 256, 28, 28]\n",
         "\n",
+        "        # Keep pooling until we get to [B, 256, 1, 1]\n",
+        "        x = self.pool(x)             # [B, 256, 14, 14]\n",
+        "        x = self.pool(x)             # [B, 256, 7, 7]\n",
+        "        x = self.pool(x)             # [B, 256, 3, 3]\n",
+        "        x = self.pool(x)             # [B, 256, 1, 1]\n",
         "\n",
+        "        x = x.view(x.size(0), -1)    # flatten: [B, 256]\n",
+        "        x = self.fc1(x)              # [B, 200]\n",
         "        return x"
       ],
       "metadata": {
         "id": "vpdGGfa8lDde"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "What is missing in the code:\n",
+        "\n",
+        "\n",
+        "1.   Zero the gradients\n",
+        "2.   Forward pass\n",
+        "3.   Compute the Loss\n",
+        "4.   Backward pass (Backpropagation)\n",
+        "5.   Optiomizer step (update weights)"
+      ],
+      "metadata": {
+        "id": "KIi6VIedZQ-r"
+      }
     },
     {
       "cell_type": "code",
       "source": [
         "def train(epoch, model, train_loader, criterion, optimizer):\n",
+        "    #set the model to training mode\n",
         "    model.train()\n",
         "    running_loss = 0.0\n",
         "    correct = 0\n",
@@ -246,7 +307,17 @@
         "    for batch_idx, (inputs, targets) in enumerate(train_loader):\n",
         "        inputs, targets = inputs.cuda(), targets.cuda()\n",
         "\n",
-        "        # todo...\n",
+        "        #Zero the gradients (accumulated by default)\n",
+        "        optimizer.zero_grad() # clears the old gradients\n",
+        "        #forward\n",
+        "        outputs = model(inputs)\n",
+        "        #Loss function\n",
+        "        loss = criterion(outputs, targets)\n",
+        "        #Backpropagation\n",
+        "        loss.backward()\n",
+        "        #optimizer\n",
+        "        optimizer.step()\n",
+        "\n",
         "\n",
         "        running_loss += loss.item()\n",
         "        _, predicted = outputs.max(1)\n",
