--- a/Lab02.ipynb
+++ b/Lab02.ipynb
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "HuUvU_Gug7Gk"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "Xt1X5euKfoEd"
       },
@@ -167,7 +167,7 @@
         },
         "outputId": "4c1e1150-8e4c-4443-872f-301f6f7797bc"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +193,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,7 +275,7 @@
       "metadata": {
         "id": "vpdGGfa8lDde"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -335,10 +335,26 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Validation: <br>\n",
+        "In this step:\n",
+        "\n",
+        "\n",
+        "*   We don't do Backpropagation\n",
+        "*   We don't updates weights\n",
+        "*   We only evaluate how good the model is"
+      ],
+      "metadata": {
+        "id": "6yS0PVs80VBx"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Validation loop\n",
         "def validate(model, val_loader, criterion):\n",
+        "  #Set the model to validation mode\n",
         "    model.eval()\n",
         "    val_loss = 0\n",
         "\n",
@@ -348,7 +364,10 @@
         "        for batch_idx, (inputs, targets) in enumerate(val_loader):\n",
         "            inputs, targets = inputs.cuda(), targets.cuda()\n",
         "\n",
-        "            # todo...\n",
+        "            #Forward pass\n",
+        "            outputs = model(inputs)\n",
+        "            #Loss function\n",
+        "            loss = criterion(outputs, targets)\n",
         "\n",
         "            val_loss += loss.item()\n",
         "            _, predicted = outputs.max(1)\n",
