Creato con Colab

--- a/Python.ipynb
+++ b/Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6aZuCyz7V2JlxAmpgwX8p",
+      "authorship_tag": "ABX9TyOKvQmFtGN/6W1bfGQqnCsO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
         "id": "ANQfxztxsS8Q",
         "outputId": "547d3481-eb8f-45b3-c16f-3f1efa621f49"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +142,7 @@
         "id": "p9fn9Z80Qr4x",
         "outputId": "fcce7f16-37e2-4efd-ddfc-ccef65cdaf7c"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +196,7 @@
         "id": "4XMmGmy7UuzL",
         "outputId": "f7d7ef3a-50c6-4fe3-a8dc-7537ac9fe7f5"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,7 +266,7 @@
         "id": "LLlPhdBpZHxK",
         "outputId": "abd8c099-dbcd-4414-b29b-a2e1df16344e"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,7 +318,7 @@
         "id": "WKkai0zrfn1a",
         "outputId": "77b8c99e-f2a4-4fcf-e831-054d298298e5"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -371,7 +371,7 @@
         "id": "X93Q1nRrhQl8",
         "outputId": "f4df5995-f1f2-4d6c-c487-08be8868c8f9"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,6 +511,466 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MAP & FILTERS:\n",
+        "\n",
+        "\n",
+        "*   Filter: given a sequence of values, keep some and discard the rest:\n",
+        "```\n",
+        "# filter(filter_function, sequence)\n",
+        "```\n",
+        "*   Map: given a sequence of values, map each element to a new one:\n",
+        "```\n",
+        "# map(map_function, sequence)\n",
+        "```\n",
+        "NB: map and filter returns an iterator so we have to cast the rresult into a list\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "VV4uObxgyBLl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Filter pattern\n",
+        "def is_positive(number):\n",
+        "  return number >= 0\n",
+        "\n",
+        "numbers = [2,4,-1,7,0]\n",
+        "positive = list(filter(is_positive,numbers))\n",
+        "print(positive)"
+      ],
+      "metadata": {
+        "id": "Q3T1y9BGyvxj",
+        "outputId": "16de7851-0251-44ae-def3-7b07a7ebd099",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 7, 0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#map\n",
+        "def square(numbers):\n",
+        "  return numbers**2\n",
+        "\n",
+        "numbers = [2,4,-1,7,0]\n",
+        "squared = list(map(square,numbers))\n",
+        "print(squared)"
+      ],
+      "metadata": {
+        "id": "o7m2xiG8zudc",
+        "outputId": "437f56c8-d9fe-4b24-f743-e6ec537fdedf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[4, 16, 1, 49, 0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Lambda functions"
+      ],
+      "metadata": {
+        "id": "Wk2cx77M1Dae"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [1, -8, 5, -2, 5]\n",
+        "\n",
+        "positives = list(filter(lambda x: x>=0, numbers))\n",
+        "squares = list(map(lambda x: x**2, numbers))\n",
+        "print(positives)\n",
+        "print()\n",
+        "print(squared)"
+      ],
+      "metadata": {
+        "id": "hcALZeK31ISU",
+        "outputId": "51e1a62a-7147-4194-f88c-91dac141182d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 5, 5]\n",
+            "\n",
+            "[4, 16, 1, 49, 0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#conditional lambda functions\n",
+        "numbers = [1, -1, 2, -2, 1]\n",
+        "\n",
+        "sign = list(map(lambda x: '-' if x<=0 else '+',numbers))\n",
+        "print(sign)\n",
+        "print()\n",
+        "\n",
+        "abs_values = list(map(lambda x: x if x>0 else -x, numbers))\n",
+        "print(abs_values)"
+      ],
+      "metadata": {
+        "id": "_TlyWvKj16YQ",
+        "outputId": "0df2c0a4-0524-499b-e779-c5387f105f6a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['+', '-', '+', '-', '+']\n",
+            "\n",
+            "[1, 1, 2, 2, 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Sort/Min/Max by dictionary key"
+      ],
+      "metadata": {
+        "id": "R9fbYkls2tmM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "records = [{'name': 'v1', 'val': 5}, {'name': 'v2', 'val': 1}, {'name': 'v3', 'val': 6}]\n",
+        "\n",
+        "min_val = min(records, key=lambda r: r['val'])\n",
+        "sorted_records = sorted(records, key=lambda r: r['val'], reverse=True)\n",
+        "\n",
+        "print(f'Min : {min_val}')\n",
+        "print()\n",
+        "print(f\"Sorted :  {sorted_records}\")\n"
+      ],
+      "metadata": {
+        "id": "pbyaa1iH2p7N",
+        "outputId": "2d3ee059-f9da-4757-cbc2-f238e839de2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Min : {'name': 'v2', 'val': 1}\n",
+            "\n",
+            "Sorted :  [{'name': 'v3', 'val': 6}, {'name': 'v1', 'val': 5}, {'name': 'v2', 'val': 1}]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "List comprehensions: allows creating lists from other iterables:\n",
+        "\n",
+        "```\n",
+        "#res_list = [f(el) for el in iterable]\n",
+        "```\n",
+        "where: <br>\n",
+        "f(el) --> is the transformation\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "gILAYCF9-nLd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dct = {'a': 10, 'b': 20, 'c': 30}\n",
+        "\n",
+        "my_list = [el.upper() for el in dct.keys()]\n",
+        "print(my_list)\n",
+        "\n",
+        "\n",
+        "#with conditions\n",
+        "my_list2 = [el**2 for el in dct.values() if el >10]\n",
+        "print(my_list2)"
+      ],
+      "metadata": {
+        "id": "w2nKcxpZ_Q1K",
+        "outputId": "5899815b-1d41-4b52-e3a2-a96c7daa1b84",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['A', 'B', 'C']\n",
+            "[400, 900]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dictionary comprehensions"
+      ],
+      "metadata": {
+        "id": "JuiY0wEsAW5o"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "keys = ['a','b','c']\n",
+        "values = [-1, 4, -2]\n",
+        "\n",
+        "my_dict = {k:v for k,v in zip(keys,values)}\n",
+        "print(my_dict)"
+      ],
+      "metadata": {
+        "id": "PvCU-YvxASwC",
+        "outputId": "9ab858ec-fa1a-4be9-a92a-8955d769d99d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'a': -1, 'b': 4, 'c': -2}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Set comprehensions"
+      ],
+      "metadata": {
+        "id": "kKZla6fgA9vw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = {v**2 for v in [1,2,3,4,5]}\n",
+        "print(s)"
+      ],
+      "metadata": {
+        "id": "0fJhnF8WBH9b",
+        "outputId": "61c365cf-897d-4f6d-d93d-e1eb20a50d59",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 4, 9, 16, 25}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Classes**:\n",
+        "A class is a model that specifies a collection of:\n",
+        "\n",
+        "\n",
+        "*   Attributes (=Variables)\n",
+        "*   Methods (that interacts with variables)\n",
+        "*  Constructor (initializes the object)\n",
+        "\n",
+        "An obj is an **instance** of a specific class\n"
+      ],
+      "metadata": {
+        "id": "ShScvWJPBTQI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Dog:\n",
+        "  #constructor, it runs automatically every time we create a new object from the class\n",
+        "  def __init__(self, name, age): #self is a reference to the current object\n",
+        "    self.name = name\n",
+        "    self.age = age\n",
+        "\n",
+        "\n",
+        "  def bark(self):\n",
+        "    print(f\"{self.name} says: Woof!\")"
+      ],
+      "metadata": {
+        "id": "dvdlOKm0BaYF",
+        "outputId": "0b6bfac6-c8ab-4e09-c69f-046fe2bb5c64",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Private Attributes"
+      ],
+      "metadata": {
+        "id": "woYUfLi6EvXA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Triangle:\n",
+        "  def __init__(self, a, b, c):\n",
+        "    self.a, self.b, self.c = a,b,c\n",
+        "    self.__perimeter = a+b+c\n",
+        "  def get_perimeter(self):\n",
+        "    return self.__perimeter\n",
+        "\n",
+        "\n",
+        "tr = Triangle(2,4,3)\n",
+        "print(tr.get_perimeter())\n",
+        "print(tr.__perimeter)#error private attribute"
+      ],
+      "metadata": {
+        "id": "9yRI_3YjF-_2",
+        "outputId": "365d002d-7737-4ed9-a41b-eb833aa3c19d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 198
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'Triangle' object has no attribute '__perimeter'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-20-1ea6d44cfe7f>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mtr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTriangle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_perimeter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__perimeter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'Triangle' object has no attribute '__perimeter'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Exceptions: track errors during program execution"
+      ],
+      "metadata": {
+        "id": "MrZDwNeVGt6l"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "  #code\n",
+        "  res = 'str'\n",
+        "  res += 2\n",
+        "except:\n",
+        "  print('error log')\n",
+        "\n",
+        "\n",
+        "#customize the exception\n",
+        "try:\n",
+        "  #code\n",
+        "  res = 2/0\n",
+        "except ZeroDivisionError:\n",
+        "  print('error log')\n",
+        "finally:\n",
+        "  print('program closed')\n"
+      ],
+      "metadata": {
+        "id": "0H9UdGNzGzdo",
+        "outputId": "794240ca-c4f8-4528-b554-602dcb9f743c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "error log\n"
+          ]
+        }
+      ]
     }
   ]
 }
